...
                                                value = searchQuery,
                                                onValueChange = { searchQuery = it },
                                                label = { Text(stringResource(R.string.search_by_title)) },
                                                modifier = Modifier
                                                    .fillMaxWidth()
                                                    .padding(16.dp)
                                                    .testTag("SearchInput"),
                                            )

                                            val buttonSize = Modifier
                                                .height(55.dp)
                                                .width(100.dp) // adjust width as needed

...
                                                    onClick = {
                                                        viewModel.loadRandomMovie { randomMovie ->
                                                            selectedMovie = randomMovie
                                                            navController.navigate("movie_details/${randomMovie.id}")
                                                        }
                                                    },
                                                    modifier = buttonSize.testTag("RandomMovieButton")
                                                ) {
                                                    Text(stringResource(R.string.random_movie))
                                                }
                                            }


...
